--- a/.github/workflows/update-image-on-push.yml
+++ b/.github/workflows/update-image-on-push.yml
@@ -32,12 +32,6 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - 
-        name: Login to DockerHub
-        uses: docker/login-action@v3.0.0 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - 
         name: Checkout repository
         uses: actions/checkout@v4
       - 
@@ -54,11 +48,9 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/public-pool-ui:latest
             ghcr.io/${{ github.repository_owner }}/public-pool-ui:${{ steps.get_short_sha.outputs.sha_short }}
-            ${{ secrets.DOCKER_USERNAME }}/public-pool-ui:latest
-            ${{ secrets.DOCKER_USERNAME }}/public-pool-ui:${{ steps.get_short_sha.outputs.sha_short }}
           labels: |
             org.opencontainers.image.source=${{ github.event.repository.html_url }}
             org.opencontainers.image.created=${{ steps.prep.outputs.created }}
             org.opencontainers.image.revision=${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/public-pool-ui:latest
-          cache-to: type=inline
+          cache-from: type=gha
+          cache-to: type=gha
